# product_catalog

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
api/product/: models.py  urls.py  views.py
api/product/migrations/: 0001_initial.py
api/review/: admin.py  apps.py  models.py  urls.py  views.py
api/review/migrations/: 0001_initial.py
api/user/: serializers.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
